--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "tailwind-merge": "^2.5.5",
