--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
